src/styles/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import 'https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Charm:wght@400;700&display=swap';

@import 'https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Charm:wght@400;700&family=Sen:wght@400..800&display=swap';

:root {
  --primary-color: #e4b022;
  --secondary-color: #ffffff;
  --tertiary-color: #000000;
  --H1-Desktop-font-size: 30px;
  --H1-Mobile-font-size: 25px;
  --H2-Desktop-font-size: 25px;
  --H2-Mobile-font-size: 20px;
  --Button-and-Input-desktop-font-size: 14px;
  --Button-and-Input-mobile-font-size: 16px;
  --Nav-Desktop-font-size: 16px;
  --Labels-mobile-font-size: 14px;
  --Labels-desktop-font-size: 16px;
  --Body-text-mobile-font-size: 16px;
  --Body-text-desktop-font-size: 18px;
  --Font-1: 'Charm', cursive;
  --Font-2: 'Sen', sans-serif;
}

.body-styles {
  @apply m-0 flex flex-col min-h-[100vh] bg-black overflow-x-hidden;
}
.main-styles {
  @apply ml-20;
}

.auth-main {
  @apply mt-32;
  height: max-content;
}

.auth-box {
  position: absolute;
  top: 50px;
  left: 50%;
  transform: translateX(-50%);
}

.two-column-layout {
  @apply grid  grid-cols-2  items-center justify-center;
}

.h1-styles {
  color: var(--secondary-color);
  font-size: var(--H1-Mobile-font-size);
  @apply font-custom md:text-3xl;
}

.body-text-styles {
  color: var(--secondary-color);
  font-size: var(--Body-text-mobile-font-size);
  @apply font-custom2 md:text-lg;
}

.body-text-desktop {
  color: var(--secondary-color);
  font-size: var(--Body-text-desktop-font-size);
  @apply font-custom2;
}

.body-text-mobile {
  color: var(--secondary-color);
  font-size: var(--Body-text-mobile-font-size);
  @apply font-custom2;
}

.labels {
  color: var(--secondary-color);
  font-size: var(--Labels-mobile-font-size);
  @apply font-custom md:text-base;
}

.h2-styles {
  color: var(--secondary-color);
  font-size: var(--H2-Mobile-font-size);
  @apply font-custom md:text-[25px];
}
.button-styles {
  font-size: var(--Button-and-Input-mobile-font-size);
  @apply bg-primary font-extrabold text-tertiary font-custom2 rounded-lg hover:shadow-custom active:shadow-custom2  md:text-sm;
  padding: 10px 25px;
}

.close-button-auth {
  @apply -ml-6 px-3 py-1 md:px-2 md:py-1 mt-2 mb-2;
}
.gold-labels {
  font-size: var(--Labels-mobile-font-size);
  @apply text-[var(--primary-color)] font-custom1 md:text-base;
}

.search-bar-layout {
  @apply flex flex-row items-center justify-end  gap-2;
}

.desktop-select {
  @apply flex flex-row  gap-4;
}

.Categories {
  @apply pb-4;
}

.mobile-select {
  visibility: hidden;
  @apply p-0;
}

.search-input {
  @apply border-2 border-[var(--primary-color)] rounded-lg text-[var(--primary-color)];

  &:hover {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:active {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:focus {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:focus-within {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
}

.flex-row-center {
  @apply flex flex-row items-center justify-center w-full;
}

.flex-col-center-layout {
  @apply flex flex-col items-center justify-center w-full;
}
.loading-symbol {
  @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-xl text-black;
}

.logo {
  @apply rounded-full border-2 border-[var(--primary-color)];
}

@layer utilities {
  .z-12 {
    z-index: 12;
  }
}

.header-styles {
  @apply w-full flex flex-col h-56 fixed bg-black z-10 border-2 border-[var(--primary-color)];
}

.header-styles-other-pages {
  @apply w-full flex flex-col h-24 fixed bg-black z-10 border-2 border-[var(--primary-color)];
}

.sidebar-styles {
  @apply flex flex-row items-center z-12 justify-center bg-black gap-4;
}
.hamburger {
  display: none;
}

.nav-menu {
  @apply flex flex-row gap-4;
}

.sidebar-height-when-closed {
  @apply max-h-[100px] top-0 bottom-0 pt-0;
  overflow-y: visible;
}

.sidebar-height-when-open {
  @apply h-80 w-auto top-0 bottom-0 pt-0 overflow-y-scroll;
}

.search-category-box {
  @apply flex flex-col items-center w-[100%] h-auto gap-0;
}

.desktop-category-div {
  @apply flex flex-row;
}

.nav-styles {
  @apply flex flex-row;
}

.nav-styles-hover {
  @apply flex flex-row;
}
.sidebar-li-layout {
  @apply flex flex-row;
}

.span-text-hover {
  @apply flex flex-row text-[var(--secondary-color)];
}

.outer-container {
  @apply flex flex-col w-[100%] items-center justify-center mt-[20px] md:grid md:grid-cols-2 xl:grid-cols-3 lg:gap-4 gap-y-4 md:gap-y-4;
}

.link-flex {
  @apply flex flex-row items-center justify-center;
}

.listing-container-styles {
  @apply flex flex-col md:flex-row items-center w-[380px] h-[420px] pr-4  justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
}

.listing-header {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  height: 60px;
  max-width: 100%;
}

.h1-home-box{
  @apply mt-[250px] mb-8;
}

.listing-container-my-bids {
  @apply flex flex-col md:flex-row items-center w-[300px] h-[400px] md:w-[380px] md:h-[400px]  justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
}

.inner-container-styles {
  @apply flex flex-row  items-center justify-center  rounded-lg;
}

.listing-image-styles {
  @apply w-[20rem]  rounded-lg;
}

.seller-avatar-img {
  @apply w-[3rem] h-[3rem] rounded-full border-2 border-[var(--primary-color)] flex-shrink-0;
}

.carousel {
  @apply flex justify-between align-middle overflow-hidden relative w-10;
}

.carouselInner {
  @apply flex flex-row transition-transform duration-300 ease-in-out;
}

.imageContainer {
  @apply flex items-center relative overflow-x-hidden w-[10rem] md:w-[20rem] rounded-lg border-2 border-[var(--primary-color)];
}

.imageContainerMyBids {
  @apply flex items-center relative overflow-x-hidden w-[10rem] md:w-[15rem] rounded-lg border-2 border-[var(--primary-color)];
}
.carousel-container {
  @apply flex justify-between items-center relative;
}
@layer utilities {
  .z-12 {
    z-index: 12;
  }
  .font-custom1 {
    font-family: var(--Font-1);
  }
}
.carousel-control-left {
  @apply absolute right-28  w-[50px] h-[50px] md:w-[80px] md:h-[80px] md:right-24  transform translate-y-0;
}

.carousel-control-right {
  @apply absolute w-[50px] h-[50px] md:w-[80px] md:h-[80px]  left-28 md:left-24  transform translate-y-0;
}

.form-title-styles {
  @apply bg-[var(--primary-color)] shadow-lg shadow-white text-center;
}

.form-styles {
  @apply border-4 border-[var(--primary-color)] bg-[var(--tertiary-color)] items-center justify-center gap-2;
}

.form-padding {
  @apply pl-8 pr-8 pb-4;
}

.form-padding-create {
  @apply pl-10 pr-10 pb-4;
}

.text-area-styles {
  @apply border-2 border-[var(--primary-color)] rounded-lg w-[180px] h-[95px] md:w-[201px] text-[var(--primary-color)];

  &:hover {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:active {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:focus {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:focus-within {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
}
.input-styles {
  @apply border-2 border-[var(--primary-color)] rounded-lg  text-[var(--primary-color)];

  &:hover {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:active {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:focus {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
  &:focus-within {
    @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
  }
}

.view-bids-box {
  @apply flex flex-col absolute z-12  mr-[20px] md:mr-[150px] bg-[var(--tertiary-color)] items-center justify-center gap-2 w-[200px] h-[auto] border-2 border-[#e4b022] rounded-lg;
}

.footer {
  font-family: var(--Font-2);
  @apply grid grid-cols-2 mt-2 w-[100%] h-[80px] bg-[var(--primary-color)] text-[16px] md:text-base text-[var(--tertiary-color)]  font-bold;
}

.social-media-icons {
  @apply w-[25px] h-[25px] md:w-[50px] md:h-[50px];
}

.social-media-icons-box {
  @apply flex flex-row items-center justify-end gap-2;
}

.footer-text-layout {
  @apply grid grid-cols-2 md:flex md:flex-row  items-center justify-start gap-0 md:gap-2;
}

.image-container-individual-listing {

display: flex;
  flex-direction: row;
  gap: 10px;
  padding: 10px;
  border-radius: 10px;
  max-width: 80vw;
  overflow-x: auto;
  items-center: center;
  justify-items: center;
}


.listing-container-individual-listing {
  @apply flex flex-col items-center justify-center overflow-y-scroll;
}

.listing-images-individual-listing {
  @apply border-[var(--primary-color)] border-2 ;
max-width: 300px;
max-height: 500px;

  border-radius: 8px;
}

.banner-container {
  @apply flex flex-col items-center justify-center w-[90%] max-h-screen;
}

.banner {
  @apply object-cover w-[90rem] h-[15rem] rounded-lg border-[var(--primary-color)] border-2;
}

.profile-avatar {
  @apply absolute w-[127px] h-[127px] md:w-[170px] md:h-[170px] rounded-full border-2 border-[var(--primary-color)];
}

@media (max-width: 767px) {
  .sidebar-styles {
    @apply flex flex-col gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
  }

  .h1-home-box{
  @apply mt-[150px] mb-8;
}

  .hamburger {
    display: block;
  }

  .auth-main {
    @apply mt-20;
  }

  .search-category-box {
    @apply h-[50px] gap-4;
  }

  .hidden {
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
  }

  .header-styles {
    @apply flex flex-row h-40;
  }

  .header-styles-other-pages {
    @apply flex flex-row h-24 border-none;
  }

  .mobile-select {
    @apply block border w-[200px] text-white px-2 py-1 rounded !important;
    visibility: visible;
    z-index: 1;
    position: relative;
    appearance: none;
  }

  .mobile-select:focus {
    position: relative;
    z-index: 10;
  }

  .logo-margin-logged-in-closed {
    @apply mt-[600px];
  }

  .desktop-select {
    @apply hidden;
  }

  .nav-menu {
    @apply flex flex-col items-center justify-center gap-4 pt-2 pb-2;
  }

  .nav-styles {
    @apply flex flex-col items-center justify-center gap-2;
  }

  .sidebar-height-when-closed {
    @apply pb-32  top-0 bottom-0 pt-0 overflow-y-visible;
  }

  .sidebar-height-when-open {
    @apply h-auto;
  }

  .nav-styles-hover {
    @apply flex flex-col items-start justify-center gap-2;
  }

  .nav-hover {
    @apply w-[150px];
  }

  .logo-top-margin {
    @apply mt-[360px];
  }

  .logo-no-margin {
    @apply mt-0;
  }

  .listing-container-styles {
    @apply h-[500px];
  }

  .listing-images-individual-listing {

max-width: 300px;

}

.image-container-individual-listing {

display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 10px;
  border-radius: 10px;
  max-width: 50vw;
  max-height: 500px;
  overflow-x: hidden;
  overflow-y: auto;
  items-center: center;
  justify-items: center;
}
}

@media (max-width: 384px) {
  .Categories {
    width: 295px;
    height: 300px;
    display: flex;
    justify-content: end;
    position: relative;
  }

  .search-bar-layout {
    @apply flex flex-row justify-end;
    width: 300px;
  }

  .search-cat-box-mobile {
    @apply w-[800px] flex flex-col items-end;
  }

  .search-button-box {
    @apply flex flex-row justify-center w-[200px];
  }
  .listing-images-individual-listing {

max-width: 200px;

}
}

